--- a/index.html
+++ b/index.html
@@ -2,32 +2,40 @@
 <!--
 /*
     Author: Briana Oree
-	Creation Date:
-	Title: FirstPhone gap app
-	Revised:
-	Purpose: get used tp phone gab
-	Notes:
+    Creation Date: 
+    Title: First Phone gap app
+    Revised:
+    Purpose: get used to phone gap
+    Notes:
 */
 -->
 <html>
     <head>
-        <meta charset="utf-8"?
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">           
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <meta name="viewport" content="width=device-width,
             maximum-scale=1,
             initial-scale=1,
-            user-scalable=yes" >
+            user-scalable=no" >
         <meta name="mobile-web-app-capable" content="yes" >
         <meta name="apple-mobile-web-app-capable" content="yes" >
         <meta name="apple-mobile-web-app-status-bar-style" content="black" >
-	<title>1st PhoneGap app</title>
-	<link rel="stylesheet" href="styles.css">
-</head>
-   <body>
-       <div class="banner banner-top">This is the top banner</div>
-	   <div class="banner banner-bottom">Bottom banner</div>
-   
-   <!-- NO HTML BELOW THIS LINE -->
-   <script src="main.js"</script>
-   </body>
+        
+        <title>1st PhoneGap app</title>
+        <link rel="stylesheet" href="styles.css">
+        <script src='https://dl.dropboxusercontent.com/u/21142484/modules/noprefix.js';></script>
+        <script src='https://dl.dropboxusercontent.com/u/21142484/modules/lib.js';></script>
+    </head>
+    <body>
+      <div id="frontPanel">
+        <div class="banner banner-top"><span id="menu">&#9776;</span>Top Banner - Abbas</div>
+        <div id="content" ></div>
+        <div class="banner banner-bottom">Bottom Banner</div>
+      </div>
+      <div id="backPanel"></div>
+
+    
+    <!-- NO HTML BELOW THIS LINE -->
+    <script src="main.js"></script>
+    </body>
 </html>
