--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <!--
 /*
     Author: Briana Oree
-    Creation Date: 
+    Creation Date: February 15, 2016
     Title: First Phone gap app
-    Revised:
+    Revised: February 22, 2016
     Purpose: get used to phone gap
     Notes:
 */
